# nebula-insurance-crm

./: .agentignore  .env.example  .gitignore  .split-baseline  CHANGELOG.md  LICENSE  Notifications-Implementation-Details.md  README.md  architecture-change-summary.md  docker-compose.qe.yml  docker-compose.yml  dual_stack_implementation.md  lifecycle-stage.yaml  pyproject.toml
.claude/: settings.local.json
.githooks/: README.md  pre-commit
engine/: .dockerignore  Nebula.slnx
experience/: index.html  (+13 more)
neuron/: .env.example  Dockerfile  README.md  neuron-local-phi-vllm-wsl2-runbook.md  pyproject.toml
neuron/config/: agents.yaml  mcp.yaml  models.yaml
neuron/crm-agents/broker/: README.md
neuron/crm-agents/renewal/: README.md
neuron/crm-agents/underwriter/: README.md
neuron/mcp/: server.py
neuron/models/: claude.py  ollama.py  router.py
neuron/src/: __init__.py
neuron/src/api/: __init__.py  main.py  middleware.py
neuron/src/api/routers/: __init__.py  broker_insights.py  health.py
neuron/src/application/: __init__.py
neuron/src/application/dtos/: __init__.py  broker_insights_dtos.py
neuron/src/application/use_cases/: broker_insights_use_cases.py
neuron/src/domain/: __init__.py  broker_insights.py
neuron/src/infrastructure/: __init__.py  db.py
neuron/src/infrastructure/models/: broker_read.py
neuron/src/infrastructure/repositories/: broker_insights_repository.py
neuron/tests/unit/: test_broker_insights_domain.py
neuron/workflows/orchestrator/: README.md
neuron/workflows/renewal/: README.md
neuron/workflows/submission/: README.md
(+1899 files in other folders)
