[project]
name = "nebula-neuron"
version = "0.1.0"
description = "Nebula Neuron Python data layer sidecar"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "structlog>=24.0",
  "httpx>=0.27",
  "pandas>=2.2",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff",
  "mypy",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
